--- a/deploy/nais.yaml
+++ b/deploy/nais.yaml
@@ -71,8 +71,8 @@ spec:
     - {{ingress}}
   {{/each}}
   replicas:
-    min: 2
-    max: 2
+    min: {{replicasMin}}
+    max: {{replicasMax}}
     cpuThresholdPercentage: 80
   prometheus:
     enabled: true
