--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -47,8 +47,8 @@ ARBEID_OG_INNTEKT_URL: https://arbeid-og-inntekt.prod-fss-pub.nais.io/
 
 KLAGE_FSS_PROXY_URL: https://klage-fss-proxy.prod-fss-pub.nais.io
 
-OPPGAVE_API_BASE_URL: https://oppgave.prod-fss-pub.nais.io/api/v1
-OPPGAVE_API_SCOPE: prod-fss.oppgavehandtering.oppgave
+GOSYS_OPPGAVE_BASE_URL: https://oppgave.prod-fss-pub.nais.io/api/v1
+GOSYS_OPPGAVE_SCOPE: prod-fss.oppgavehandtering.oppgave
 
 FSS_CLUSTER: prod-fss
 
