--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -296,18 +296,18 @@ no.nav.security.jwt:
           client-id: ${AZURE_APP_CLIENT_ID}
           client-jwk: ${AZURE_APP_JWK}
           client-auth-method: private_key_jwt
-      oppgave-api-onbehalfof:
+      gosys-oppgave-onbehalfof:
         token-endpoint-url: https://login.microsoftonline.com/${TENANT_ID}/oauth2/v2.0/token
         grant-type: urn:ietf:params:oauth:grant-type:jwt-bearer
-        scope: api://${OPPGAVE_API_SCOPE}/.default
+        scope: api://${GOSYS_OPPGAVE_SCOPE}/.default
         authentication:
           client-id: ${AZURE_APP_CLIENT_ID}
           client-jwk: ${AZURE_APP_JWK}
           client-auth-method: private_key_jwt
-      oppgave-api-maskintilmaskin:
+      gosys-oppgave-maskintilmaskin:
         token-endpoint-url: https://login.microsoftonline.com/${TENANT_ID}/oauth2/v2.0/token
         grant-type: client_credentials
-        scope: api://${OPPGAVE_API_SCOPE}/.default
+        scope: api://${GOSYS_OPPGAVE_SCOPE}/.default
         authentication:
           client-id: ${AZURE_APP_CLIENT_ID}
           client-jwk: ${AZURE_APP_JWK}
