Allow mine-klager as inbound.

--- a/deploy/dev.yaml
+++ b/deploy/dev.yaml
@@ -22,6 +22,7 @@ inboundApplications:
   - application: klage-arkiver-journalpost
   - application: kabin-api
   - application: kabin
+  - application: mine-klager
   - application: k9-klage
     namespace: k9saksbehandling
     cluster: dev-fss
