--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -74,8 +74,7 @@ management:
 SERVICE_USER_USERNAME: srvklage-saksbeh
 
 no.nav.security.jwt:
-  issuer:
-    aad:
+  issuer.aad:
       discoveryurl: ${AZURE_APP_WELL_KNOWN_URL}
       accepted_audience: ${AZURE_APP_CLIENT_ID}
   issuer.tokenx:
