End point for getting merged pdf from journalpost by Id. Based on similar function in klage-dittnav-api. POC.

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -36,6 +36,9 @@ NOM_SCOPE: prod-gcp.nom.nom-api
 SAF_BASE_URL: https://saf.prod-fss-pub.nais.io/
 SAF_SCOPE: prod-fss.teamdokumenthandtering.saf
 
+SAFSELVBETJENING_BASE_URL: https://safselvbetjening.prod-fss-pub.nais.io
+SAFSELVBETJENING_AUDIENCE: prod-fss:teamdokumenthandtering:safselvbetjening
+
 DOKARKIV_SCOPE: prod-fss.teamdokumenthandtering.dokarkiv/
 DOKARKIV_BASE_URL: https://dokarkiv.prod-fss-pub.nais.io/rest/journalpostapi/v1
 
