--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -36,6 +36,9 @@ NOM_SCOPE: dev-gcp.nom.nom-api
 SAF_BASE_URL: https://saf-q2.dev-fss-pub.nais.io/
 SAF_SCOPE: dev-fss.teamdokumenthandtering.saf
 
+SAFSELVBETJENING_BASE_URL: https://safselvbetjening.dev-fss-pub.nais.io
+SAFSELVBETJENING_AUDIENCE: dev-fss:teamdokumenthandtering:safselvbetjening
+
 DOKARKIV_SCOPE: dev-fss.teamdokumenthandtering.dokarkiv/
 DOKARKIV_BASE_URL: https://dokarkiv-q2.dev-fss-pub.nais.io/rest/journalpostapi/v1
 
