--- a/deploy/dev.yaml
+++ b/deploy/dev.yaml
@@ -47,6 +47,9 @@ inboundApplications:
   - application: tilleggsstonader-klage
     namespace: tilleggsstonader
     cluster: dev-gcp
+  - application: tokenx-token-generator
+    namespace:  aura
+    cluster: dev-gcp
 springProfile: dev-gcp
 tenant: trygdeetaten.no
 db_tier: db-f1-micro
