Correct Transactional. Get microfrontend id from settings.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -368,3 +368,5 @@ KABAL_INNSTILLINGER_APP_NAME: kabal-innstillinger
 FERDIGSTILLE_DOKUMENTER_DELAY_MILLIS: 30000
 
 SYSTEMBRUKER_IDENT: SYSTEMBRUKER
+
+MINE_KLAGER_MICROFRONTEND_ID: mine-klager-microfrontend
