Scheduled check of inaccessible behandlinger. Post results to slack.

--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -59,6 +59,7 @@ GOSYS_OPPGAVE_SCOPE: dev-fss.oppgavehandtering.oppgave
 FSS_CLUSTER: dev-fss
 
 SETTINGS_CLEANUP_CRON: 0 0 12 * * MON
+FIND_INACCESSIBLE_BEHANDLINGER_CRON: 0 0 12 * * TUE
 
 spring:
   datasource:
