Move group id to settings.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -369,3 +369,5 @@ FERDIGSTILLE_DOKUMENTER_DELAY_MILLIS: 30000
 SYSTEMBRUKER_IDENT: SYSTEMBRUKER
 
 MINE_KLAGER_MICROFRONTEND_ID: mine-klager-microfrontend
+
+KLAGE_BACKEND_GROUP_ID: S0384EXKSUS
