--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -371,3 +371,5 @@ SYSTEMBRUKER_IDENT: SYSTEMBRUKER
 MINE_KLAGER_MICROFRONTEND_ID: mine-klager-microfrontend
 
 KLAGE_BACKEND_GROUP_ID: S0384EXKSUS
+
+INNSYNSBEGJAERING_TEMPLATE_ID: svar-på-innsynsbegjæring
