--- a/deploy/prod.yaml
+++ b/deploy/prod.yaml
@@ -44,6 +44,9 @@ inboundApplications:
   - application: tilleggsstonader-klage
     namespace: tilleggsstonader
     cluster: prod-gcp
+  - application: dp-saksbehandling
+    namespace: teamdagpenger
+    cluster: prod-gcp
 springProfile: prod-gcp
 tenant: nav.no
 db_tier: db-custom-1-3840
