--- a/kafka-aiven/behandling-events.v1/dev-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/dev-vars.yaml
@@ -34,3 +34,6 @@ acl:
   - team: tilleggsstonader
     application: tilleggsstonader-klage
     access: read
+  - team: teamdagpenger
+    application: dp-saksbehandling
+    access: read
