--- a/kafka-aiven/behandling-events.v1/prod-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/prod-vars.yaml
@@ -31,3 +31,6 @@ acl:
   - team: tilleggsstonader
     application: tilleggsstonader-klage
     access: read
+  - team: teamdagpenger
+    application: dp-saksbehandling
+    access: read
