Envers: store_data_at_delete.
Co-authored-by: Øyvind N. Wedøe <oyvind.norsted.wedoe@nav.no>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,10 @@ spring:
   jpa:
     open-in-view: false
     properties:
+      org:
+        hibernate:
+          envers:
+            store_data_at_delete: true
       hibernate:
         session:
           events:
