--- a/kafka-aiven/behandling-events.v1/prod-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/prod-vars.yaml
@@ -32,5 +32,5 @@ acl:
     application: tilleggsstonader-klage
     access: read
   - team: teamdagpenger
-    application: dp-saksbehandling
+    application: dp-behov-send-til-ka
     access: read
