WIP Avtalemelding til TR.
Co-authored-by: Øyvind N. Wedøe <oyvind.norsted.wedoe@nav.no>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -377,3 +377,5 @@ MINE_KLAGER_MICROFRONTEND_ID: mine-klager-microfrontend
 KLAGE_BACKEND_GROUP_ID: S0384EXKSUS
 
 INNSYNSBEGJAERING_TEMPLATE_ID: svar-på-innsynsbegjæring
+
+ORGANISASJONSNUMMER_TRYGDERETTEN: 974761084
