--- a/deploy/prod.yaml
+++ b/deploy/prod.yaml
@@ -47,6 +47,9 @@ inboundApplications:
   - application: dp-saksbehandling
     namespace: teamdagpenger
     cluster: prod-gcp
+  - application: behandlingsflyt
+    namespace: aap
+    cluster: prod-gcp
 springProfile: prod-gcp
 tenant: nav.no
 db_tier: db-custom-1-3840
