--- a/kafka-aiven/behandling-events.v1/dev-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/dev-vars.yaml
@@ -37,3 +37,6 @@ acl:
   - team: teamdagpenger
     application: dp-saksbehandling
     access: read
+  - team: aap
+    application: behandlingsflyt
+    access: read
