--- a/kafka-aiven/behandling-events.v1/prod-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/prod-vars.yaml
@@ -34,3 +34,6 @@ acl:
   - team: teamdagpenger
     application: dp-saksbehandling
     access: read
+  - team: aap
+    application: behandlingsflyt
+    access: read
