--- a/deploy/prod.yaml
+++ b/deploy/prod.yaml
@@ -50,6 +50,9 @@ inboundApplications:
   - application: behandlingsflyt
     namespace: aap
     cluster: prod-gcp
+  - application: yrkesskade-saksbehandling-backend
+    namespace: yrkesskade
+    cluster: prod-gcp
 springProfile: prod-gcp
 tenant: nav.no
 db_tier: db-custom-1-3840
