--- a/kafka-aiven/behandling-events.v1/dev-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/dev-vars.yaml
@@ -40,3 +40,6 @@ acl:
   - team: aap
     application: behandlingsflyt
     access: read
+  - team: yrkesskade
+    application: yrkesskade-saksbehandling-backend
+    access: read
