--- a/kafka-aiven/behandling-events.v1/prod-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/prod-vars.yaml
@@ -37,3 +37,6 @@ acl:
   - team: aap
     application: behandlingsflyt
     access: read
+  - team: yrkesskade
+    application: yrkesskade-saksbehandling-backend
+    access: read
