--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -347,6 +347,8 @@ LEESAH_KAFKA_TOPIC: pdl.leesah-v1
 INTERNAL_BEHANDLING_EVENT_TOPIC: klage.internal-behandling-events.v1
 INTERNAL_IDENTITY_EVENT_TOPIC: klage.internal-identity-events.v1
 
+SMART_DOCUMENT_WRITE_ACCESS_TOPIC: klage.smart-document-write-access.v1
+
 SERVICE_USER_PASSWORD: itest
 
 KABAL_DOCUMENT_BASE_URL: http://kabal-document
