--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,6 +52,10 @@ server:
   jetty:
     threads:
       max: 600
+  compression:
+    enabled: true
+    mime-types: application/json
+    min-response-size: 5KB
 
 management:
   health:
