--- a/kafka-aiven/behandling-events.v1/dev-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/dev-vars.yaml
@@ -43,3 +43,6 @@ acl:
   - team: yrkesskade
     application: yrkesskade-saksbehandling-backend
     access: read
+  - team: k9saksbehandling
+    application: ung-sak
+    access: read
