--- a/kafka-aiven/behandling-events.v1/prod-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/prod-vars.yaml
@@ -40,3 +40,6 @@ acl:
   - team: yrkesskade
     application: yrkesskade-saksbehandling-backend
     access: read
+  - team: k9saksbehandling
+    application: ung-sak
+    access: read
