--- a/.github/workflows/deploy-to-dev.yaml
+++ b/.github/workflows/deploy-to-dev.yaml
@@ -37,21 +37,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle.kts') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      
       - name: Install Java 21
         uses: actions/setup-java@v4
         with:
           java-version: 21
           distribution: temurin
-      
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v5
       - name: Test and build
         run: ./gradlew test bootJar
         env:
