--- a/.github/workflows/pull-requests.yaml
+++ b/.github/workflows/pull-requests.yaml
@@ -7,17 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/cache@v4
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle.kts') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
       - name: Sett opp Java 21
         uses: actions/setup-java@v4
         with:
           java-version: 21
           distribution: temurin
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v5
       - name: test and build
         run: ./gradlew test build
         env:
