--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-#org.gradle.jvmargs=-Xmx8g -XX:MaxMetaspaceSize=512m
-#parallel=true
+org.gradle.jvmargs=-Xmx4g -Xmx1g
+kotlin.daemon.jvmargs=-Xmx4g -Xmx1g
 org.gradle.configuration-cache=true
 kapt.include.compile.classpath=false
