--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -354,6 +354,7 @@ LEESAH_KAFKA_TOPIC: pdl.leesah-v1
 
 INTERNAL_BEHANDLING_EVENT_TOPIC: klage.internal-behandling-events.v1
 INTERNAL_IDENTITY_EVENT_TOPIC: klage.internal-identity-events.v1
+NOTIFICATION_EVENT_TOPIC: klage.klage-notification-events.v1
 
 SMART_DOCUMENT_WRITE_ACCESS_TOPIC: klage.smart-document-write-access.v1
 
