Delete notifications when behandling is finished.

--- a/deploy/nais.yaml
+++ b/deploy/nais.yaml
@@ -100,6 +100,7 @@ spec:
         - application: kaka-api
         - application: kabal-file-api
         - application: kabal-json-to-pdf
+        - application: klage-notifications-api
         - application: clamav
           namespace: nais-system
         - application: logging
