--- a/kafka-aiven/behandling-events.v1/prod-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/prod-vars.yaml
@@ -32,7 +32,7 @@ acl:
     application: tilleggsstonader-klage
     access: read
   - team: teamdagpenger
-    application: dp-saksbehandling
+    application: dp-kabal-integrasjon
     access: read
   - team: aap
     application: behandlingsflyt
