--- a/kafka-aiven/behandling-events.v1/dev-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/dev-vars.yaml
@@ -35,7 +35,7 @@ acl:
     application: tilleggsstonader-klage
     access: read
   - team: teamdagpenger
-    application: dp-saksbehandling
+    application: dp-kabal-integrasjon
     access: read
   - team: aap
     application: behandlingsflyt
