--- a/nais/prod-config.yaml
+++ b/nais/prod-config.yaml
@@ -61,7 +61,7 @@ inboundApplications:
   - application: ung-sak
     namespace: k9saksbehandling
     cluster: prod-gcp
-springProfile: prod-gcp
+springProfile: prod
 tenant: nav.no
 db_tier: db-custom-1-3840
 db_size: 10
