--- a/.github/workflows/build-deploy-main.yaml
+++ b/.github/workflows/build-deploy-main.yaml
@@ -17,5 +17,5 @@ jobs:
       id-token: write
     uses: navikt/klage-workflows/.github/workflows/build-deploy-main.yaml@main
     with:
-      e2e-tests: 'kaka'
+      e2e-tests: 'kabal'
     secrets: inherit
