Tilgang til api og kafka topic for ny dagpenger-app.

--- a/kafka-aiven/behandling-events.v1/prod-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/prod-vars.yaml
@@ -34,6 +34,9 @@ acl:
   - team: teamdagpenger
     application: dp-saksbehandling
     access: read
+  - team: teamdagpenger
+    application: dp-kabal-integrasjon
+    access: read
   - team: aap
     application: behandlingsflyt
     access: read
