--- a/kafka-aiven/behandling-events.v1/dev-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/dev-vars.yaml
@@ -37,6 +37,9 @@ acl:
   - team: teamdagpenger
     application: dp-saksbehandling
     access: read
+  - team: teamdagpenger
+    application: dp-kabal-integrasjon
+    access: read
   - team: aap
     application: behandlingsflyt
     access: read
