--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -241,10 +241,18 @@ no.nav.security.jwt:
           client-id: ${AZURE_APP_CLIENT_ID}
           client-jwk: ${AZURE_APP_JWK}
           client-auth-method: private_key_jwt
-      skjermede-maskintilmaskin:
+      skjermede-personer-pip-maskintilmaskin:
         token-endpoint-url: https://login.microsoftonline.com/${TENANT_ID}/oauth2/v2.0/token
         grant-type: client_credentials
-        scope: api://${NAIS_CLUSTER_NAME}.nom.skjermede-personer-pip/.default
+        scope: api://${SKJERMEDE_PERSONER_PIP_SCOPE}/.default
+        authentication:
+          client-id: ${AZURE_APP_CLIENT_ID}
+          client-jwk: ${AZURE_APP_JWK}
+          client-auth-method: private_key_jwt
+      skjermede-personer-pip-onbehalfof:
+        token-endpoint-url: https://login.microsoftonline.com/${TENANT_ID}/oauth2/v2.0/token
+        grant-type: urn:ietf:params:oauth:grant-type:jwt-bearer
+        scope: api://${SKJERMEDE_PERSONER_PIP_SCOPE}/.default
         authentication:
           client-id: ${AZURE_APP_CLIENT_ID}
           client-jwk: ${AZURE_APP_JWK}
@@ -402,6 +410,8 @@ KLAGE_NOTIFICATIONS_API_BASE_URL: http://klage-notifications-api
 KLAGE_NOTIFICATIONS_API_APP_NAME: klage-notifications-api
 
 TILGANGSMASKINEN_BASE_URL: http://populasjonstilgangskontroll.tilgangsmaskin
+
+SKJERMEDE_PERSONER_PIP_BASE_URL: http://skjermede-personer-pip.nom
 
 SYSTEMBRUKER_IDENT: SYSTEMBRUKER
 
