Bean notifications not needed. Test without max-in-memory-size in application.yaml.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -33,9 +33,9 @@ spring:
   servlet:
     multipart:
       enabled: false
-  http:
-    codecs:
-      max-in-memory-size: 512MB
+#  http:
+#    codecs:
+#      max-in-memory-size: 512MB
   sql:
     init:
       platform: postgresql
