Use klage-lookup for verifying access (to borger/user) for saksbehandler.

--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -103,12 +103,11 @@ spec:
         - application: kabal-json-to-pdf
         - application: klage-notifications-api
         - application: klage-unleash-proxy
+        - application: klage-lookup
         - application: clamav
           namespace: nais-system
         - application: logging
           namespace: nais-system
-        - application: populasjonstilgangskontroll
-          namespace: tilgangsmaskin
       external:
       {{#each externalHosts}}
         - host: {{host}}
