Validate db model. Update column definitions to enforce non-null constraints in entities.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,6 +18,8 @@ spring:
     connect-retries: 2
   jpa:
     open-in-view: false
+    hibernate:
+      ddl-auto: validate
     properties:
       org:
         hibernate:
