Add Tiltakspenger to inbound and kafka consumer settings.

--- a/kafka-aiven/behandling-events.v1/dev-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/dev-vars.yaml
@@ -49,3 +49,6 @@ acl:
   - team: k9saksbehandling
     application: ung-sak
     access: read
+  - team: tpts
+    application: tiltakspenger-saksbehandling-api
+    access: read
