--- a/kafka-aiven/behandling-events.v1/prod-vars.yaml
+++ b/kafka-aiven/behandling-events.v1/prod-vars.yaml
@@ -46,3 +46,6 @@ acl:
   - team: k9saksbehandling
     application: ung-sak
     access: read
+  - team: tpts
+    application: tiltakspenger-saksbehandling-api
+    access: read
